--- a/product-manager.html
+++ b/product-manager.html
@@ -60,7 +60,7 @@
 <p><span class="badge badge-light">?le-de-France, France</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/digitaltrends/jobs/4429989002'>Job Application for Product Manager at Digital Trends</a></h5> 
+<h5><a href='https://boards.greenhouse.io/digitaltrends/jobs/4429989002'>Job Application for Product Manager at Digital Trends</a></h5> 
 <p><span class="badge badge-light">Portland, OR  ?  Portland, Oregon New York City Chicago Los Angeles</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -68,7 +68,7 @@
 <p><span class="badge badge-light">Cologne, Germany</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/ziprecruiter/jobs/1938474'>Job Application for Product Manager  at ZipRecruiter</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/ziprecruiter/jobs/1938474'>Job Application for Product Manager  at ZipRecruiter</a></h5> 
 <p><span class="badge badge-light">Santa Monica, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -88,7 +88,7 @@
 <p><span class="badge badge-light">Palo Alto, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/mapbox/jobs/1559043?gh_jid=1559043&gh_src=8f78b4871'>Job Application for Senior Product Manager, Billing &amp; IAM at Mapbox</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/mapbox/jobs/1559043?gh_jid=1559043&gh_src=8f78b4871'>Job Application for Senior Product Manager, Billing &amp; IAM at Mapbox</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -132,7 +132,7 @@
 <p><span class="badge badge-light">Richmond Toronto, ON Canada</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://whatfix101.recruiterbox.com/jobs/fk03o2r/'>
+<h5><a href='https://whatfix101.recruiterbox.com/jobs/fk03o2r/'>
     Senior Product Designer at Whatfix
 </a></h5> 
 <p><span class="badge badge-light">Karnataka, India</span></p>
@@ -240,7 +240,7 @@
 <p><span class="badge badge-light">Madison, Wisconsin  Madison, Wisconsin</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Optimizely/743999698286964-senior-product-designer-analytics'>Optimizely Senior Product Designer, Analytics | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Optimizely/743999698286964-senior-product-designer-analytics'>Optimizely Senior Product Designer, Analytics | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -262,7 +262,7 @@
 <p><span class="badge badge-light">Detroit</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qzH9Vfw4&k=Job&j=oEG79fwk&__jvst=Employee&__jvsd=sysSTfwv&__jvsc=Twitter&bid=n2EfpMwB'>Liferay, Inc. Careers - Product Designer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qzH9Vfw4&k=Job&j=oEG79fwk&__jvst=Employee&__jvsd=sysSTfwv&__jvsc=Twitter&bid=n2EfpMwB'>Liferay, Inc. Careers - Product Designer</a></h5> 
 <p><span class="badge badge-light">Brazil</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -318,7 +318,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/thinkingphones/jobs/1934901'>Job Application for Product Owner at Fuze</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/thinkingphones/jobs/1934901'>Job Application for Product Owner at Fuze</a></h5> 
 <p><span class="badge badge-light">Aveiro, Portugal Porto, Portugal</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -326,7 +326,7 @@
 <p><span class="badge badge-light">Aveiro, Portugal Porto, Portugal</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/convoy/5ffc7978-ea1a-47db-bd4a-4c7c45f6c222'>Convoy - Principal Product Manager, Strategic Projects</a></h5> 
+<h5><a href='https://jobs.lever.co/convoy/5ffc7978-ea1a-47db-bd4a-4c7c45f6c222'>Convoy - Principal Product Manager, Strategic Projects</a></h5> 
 <p><span class="badge badge-light">Seattle, Washington</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -362,7 +362,7 @@
 <p><span class="badge badge-light">NYC</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://idealo.join.com/jobs/458851-product-owner-f-or-m-or-x-data-management'>Job @ idealo internet (Berlin): Product Owner (f|m... | JOIN</a></h5> 
+<h5><a href='https://idealo.join.com/jobs/458851-product-owner-f-or-m-or-x-data-management'>Job @ idealo internet (Berlin): Product Owner (f|m... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
